# poc-monitor-contrato

./: .cursorrules  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.api  OPENCODE.md  README.md  docker-compose.yml  opencode.json  pyproject.toml  run.sh
docs/: Softon_Controle de acessos_clientes_VF.xlsx  Softon_Planilha_Pregões_.xlsx
hints/: PROJECT_CONTEXT.md
scripts/: export_contracts_excel.py  export_contracts_staging_csv.py  validate_excel_readers.py
sql/: migracao_fase1_producao.sql  normalizar_servicos.sql  tb_contrato_migration.sql
src/: __init__.py  config.py  logging_config.py  main.py
src/core/: analyzer.py  date_utils.py
src/db/: models.py  session.py
src/notifications/: email_sender.py
src/readers/: access_reader.py  contract_db_reader.py  excel_reader.py
src/web_api/: app.py  auth.py  contracts.py  institutions.py
tests/: test_analyzer_counts.py  test_contract_db_reader.py  test_date_utils.py  test_excel_reader.py  test_export_contracts_excel.py  test_institutions_api.py  verify_dates.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  main.jsx  styles.css
web/tests/: instituicao_crud.spec.mjs  testar_campos_contrato.spec.mjs  testar_contrato_copia.spec.mjs
