[project]
name = "poc-monitor-contrato"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "mysql-connector-python>=9.6.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]

[tool.setuptools]
packages = ["src"]
package-dir = {"" = "."}

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
